Add cancel-workflow command
